--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,4 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+#root {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +9,20 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.todo {
+  color: black;
+  background-color: white;
+  width: auto;
+  border-radius: 10px;
+  margin: 1rem;
+  padding: 0.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#create-input {
+  margin-left: 0.5rem;
+  border: none;
+  background-color: #282c34;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  border-bottom: 1px solid white
 }
